feat_socket_gps: initial commit

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -670,6 +670,25 @@
                     android:text="@string/only_long_rides"
                     android:theme="@style/ThemeSwitch"
                     />
+                <View
+                    android:id="@+id/ivDivExternalGps"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/dividerColor"/>
+                <androidx.appcompat.widget.SwitchCompat
+                    android:id="@+id/switchExternalGps"
+                    style="@style/TextNormal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="15dp"
+                    android:paddingEnd="20dp"
+                    android:paddingStart="20dp"
+                    android:paddingTop="15dp"
+                    android:text="@string/vehicle_gps"
+                    android:theme="@style/ThemeSwitch"
+                    />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
