feat_socket_gps: android 9 issue fixed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/xml/network_security_config.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/xml/network_security_config.xml
@@ -3,4 +3,5 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">nominatim-api-live.jungleworks.com</domain>
     </domain-config>
+    <base-config cleartextTrafficPermitted="true" />
 </network-security-config>
