--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/values-wl.xml
@@ -69,7 +69,7 @@
     <!--App Level Constants-->
     <drawable name="app_icon">@mipmap/ic_launcher</drawable><!--* IMP-->
     <string name="white_label_name">World Taxi</string><!--* IMP-->
-    <string name="google_maps_api_key"></string> <!--IMP-->
+    <string name="google_maps_api_key">AIzaSyCc7cCs0yv9EK7lNobBxtHUxM2Q5iq5G_0</string> <!--IMP-->
 
     <string name="bank_deposit_text">@string/bank_deposite</string>
 
