--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -10,8 +10,6 @@
     android:scrollbars="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:animateLayoutChanges="true"
         android:id="@+id/constraint"
         android:focusableInTouchMode="true"
@@ -176,45 +174,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/button_grey_br"
+            android:enabled="true"
             android:minWidth="90dp"
-            android:enabled="false"
-            android:paddingEnd="15dp"
-            android:visibility="invisible"
             android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:text="@string/btn_generate_otp_text"
             android:textColor="@drawable/generate_otp_text_color"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/backgroundPhone"/>
+            app:layout_constraintTop_toBottomOf="@id/backgroundPhone" />
 
-
-        <LinearLayout
-            android:id="@+id/llTnC"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="14dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:gravity="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnGenerateOtp">
-            <CheckBox
-                android:id="@+id/cbTnC"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:buttonTint="@color/themeColor"/>
-            <TextView
-                android:id="@+id/tvTnC"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="@string/by_signing_you_agree"
-                android:textColor="@color/text_color_splash_heading"
-                android:textSize="14sp"
-                />
-        </LinearLayout>
 
         <ImageView
             android:layout_width="match_parent"
