--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_splash_signup.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_splash_signup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relativeLayoutSignup"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -460,6 +460,34 @@
             </LinearLayout>
 
 
+            <LinearLayout
+                android:id="@+id/llTnC"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginEnd="20dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnGenerateOtp">
+
+                <CheckBox
+                    android:id="@+id/cbTnC"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:buttonTint="@color/themeColor" />
+
+                <TextView
+                    android:id="@+id/tvTnC"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="@string/by_signing_you_agree"
+                    android:textColor="@color/text_color_splash_heading"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/buttonEmailSignup"
