--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/values-wl.xml
@@ -20,7 +20,7 @@
     <!--DEFAULT VALUES, Don't change these-->
     <string name="police_number">100</string>
     <string name="facebook_page_id">252184564966458</string>
-    <string name="facebook_page_url">https://www.facebook.com/jugnoose</string>
+    <string name="facebook_page_url">https://www.facebook.com/TaxiyeGlobal</string>
     <string name="support_email">support@jugnoo.in</string>
     <string name="support_email_subject">Driver Support</string>
     <string name="support_phone_number">+919023121121</string>
