Ussd and back buttons working.

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
@@ -13,8 +13,7 @@
 
     <ImageView
         android:id="@+id/backBtn"
-        style="@style/BackArrow"
-        />
+        style="@style/BackArrow" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title"
