--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_cbe_top_up.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_cbe_top_up.xml
@@ -54,38 +54,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:padding="12sp"
-            android:layout_marginTop="20sp"
-            android:layout_gravity="center_horizontal">
+            android:layout_marginTop="10sp">
 
-        <TextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/phone_no"
                 android:padding="10px"
-                android:textSize="18sp"
+                android:text="@string/phone_no"
                 android:textColor="@color/text_color"
-            />
+                android:textSize="18sp"
+                android:layout_gravity="center_vertical"/>
 
 
             <AutoCompleteTextView
                 android:id="@+id/phoneNo"
                 android:layout_width="0sp"
-                android:layout_weight="1"
                 android:layout_height="75px"
-                android:layout_marginBottom="2px"
-                android:layout_marginStart="18px"
-                android:layout_marginEnd="2px"
-                android:layout_marginTop="2px"
+                android:ems="10"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
                 android:background="@drawable/background_white_rounded_bordered"
                 android:hint="@string/phone_number"
                 android:inputType="number"
+                android:paddingLeft="10sp"
+                android:layout_margin="10sp"
                 android:maxLength="14"
                 android:singleLine="true"
                 android:textColor="@color/black"
-                android:textSize="34px"/>
+                android:textSize="34px" />
 
         </LinearLayout>
         <Button
