--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_mpesa_top_up.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_mpesa_top_up.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-        <include layout="@layout/layout_top_bar" />
+    <include layout="@layout/layout_top_bar" />
 
     <LinearLayout
         android:id="@+id/container"
@@ -22,45 +22,101 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:padding="12sp"
-            android:layout_marginTop="50sp">
+            android:layout_marginTop="20sp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/amount"
-            android:padding="10px"
-            android:textSize="18sp"
-            android:textColor="@color/text_color"
-            android:layout_gravity="center_vertical"
-            />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/amount"
+                android:padding="10px"
+                android:textSize="18sp"
+                android:textColor="@color/text_color"
+                android:layout_gravity="center"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20sp"
+                android:padding="20dp">
+                <Button
+                    android:id="@+id/fiftyButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="50"
+                    android:textColor="@color/text_color"
+                    android:background="@drawable/background_white_rounded_bordered"/>
+
+                <Button
+                    android:id="@+id/hundredButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="100"
+                    android:textColor="@color/text_color"
+                    android:background="@drawable/background_white_rounded_bordered"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"/>
+                <Button
+                    android:id="@+id/hundredFiftyButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="150"
+                    android:textColor="@color/text_color"
+                    android:background="@drawable/background_white_rounded_bordered"/>
+
+            </LinearLayout>
 
 
-            <EditText
-                android:id="@+id/editTextNumber"
-                android:layout_width="0sp"
-                android:layout_height="75px"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:background="@drawable/background_white_rounded_bordered"
-                android:ems="10"
-                android:inputType="number"
-                android:paddingLeft="20sp"
-                android:layout_margin="10sp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="20dp">
+
+
+                <EditText
+                    android:id="@+id/editAmount"
+                    android:layout_width="410px"
+                    android:layout_height="80px"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="60px"
+                    android:background="@color/transparent"
+                    android:digits="0123456789"
+                    android:ems="10"
+                    android:hint="@string/enter_amount"
+                    android:inputType="number|textNoSuggestions"
+                    android:maxLength="5"
+                    android:gravity="center"
+                    android:paddingStart="25px"
+                    android:paddingEnd="25px"
+                    android:singleLine="true"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/text_size_32"
+                    />
+
+                <ImageView
+                    android:layout_width="410px"
+                    android:layout_height="2px"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@color/text_color" />
+
+            </LinearLayout>
+
+            <Button
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                style="@style/ButtonTheme"
+                android:text="@string/done"
+                android:id="@+id/btn_done"
+                android:layout_gravity="center_horizontal"
+                />
         </LinearLayout>
 
-
-        <Button
-            android:layout_marginTop="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            style="@style/ButtonTheme"
-            android:text="@string/done"
-            android:id="@+id/btn_done"
-            android:layout_gravity="center_horizontal"
-            />
     </LinearLayout>
-
-
 </LinearLayout>
