--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/cbe_dialogue.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/cbe_dialogue.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/stepsDialogue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -47,7 +47,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
         app:layout_constraintHorizontal_bias="0.456"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/stepsDialogue"
         app:layout_constraintVertical_bias="0.248" />
 
     <Button
@@ -62,6 +62,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.863"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/stepsDialogue"
         app:layout_constraintVertical_bias="0.249" />
 </androidx.constraintlayout.widget.ConstraintLayout>
