--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/cbe_dialogue.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/cbe_dialogue.xml
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
         android:text="@string/call"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
@@ -57,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
