--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_hellocash_top_up.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_hellocash_top_up.xml
@@ -28,6 +28,7 @@
             >
 
             <TextView
+                android:id="@+id/redLabelMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
